# snake_tutorial

./: 01_hello_SDL.cpp  02_getting_an_image_on_the_screen.cpp  03_event_driven_programming.cpp  04_key_presses.cpp  05_optimized_surface_loading_and_soft_stretching.cpp  06_extension_libraries_and_loading_other_image_formats.cpp  CMakeLists.txt
doc/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md
